--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "build": "tsc"
+    "build": "tsc --build"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,15 @@
   "homepage": "https://github.com/CherryNerd/express-ts-demo#readme",
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.4",
     "eslint": "^7.24.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@typegoose/typegoose": "^7.6.0",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.3"
   }
 }
