--- a/ci/nginx/deployment.yaml
+++ b/ci/nginx/deployment.yaml
@@ -2,24 +2,23 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: express-ts-demo-deployment
+  name: nginx-deployment
 
 spec:
-  replicas: 2
+  replicas: 1
 
   selector:
     matchLabels:
-      server: express-ts-demo
+      app: nginx
 
   template:
     metadata:
       labels:
-        server: express-ts-demo
+        app: nginx
     spec:
       containers:
-        - name: express-ts-demo
-          command: 
-            - node dist/app.js
+        - name: nginx
+          image: nginx:v1.3
           resources:
             requests:
               memory: "64Mi"
@@ -27,10 +26,7 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "500m"
-          image: express-ts-demo:v1.0.1
+    
           imagePullPolicy: Never
           ports:
-            - containerPort: 5000
-          env:
-            - name: NODE_ENV
-              value: production
+            - containerPort: 80
