--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typegoose/typegoose": "^7.6.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "mongo-uri-builder": "^3.2.2",
     "mongoose": "^5.12.3"
   }
 }
